add phone number

--- a/index.html
+++ b/index.html
@@ -15,20 +15,25 @@
     </header>
 <hr>
     <main>
+        <h4>Summary:</h4>
         <p>I am 26-years old beginning front-end developer from Brest, Belarus. 
             My strengths are quick self-learning, team-working, punktuality and responsibility. 
             I would to be a part of developer team, where I would have an opportunity to increase my 
             skills in programming.</p>
 
-        <h4>Skills:</h4> <p>HTML, CSS, JavaScript, Google DevTools, GIT</p>
-        <h4>Education:</h4> <p>Belarusian University of Culture and Arts (librarianship), 
+        <h4>Skills:</h4>
+        <p>HTML, CSS, JavaScript, Google DevTools, GIT</p>
+        <h4>Education:</h4>
+        <p>Belarusian University of Culture and Arts (librarianship), 
                codeacademy (HTML, CSS basics), code-basics.ru (JavaScript)</p>
-        <h4>English level:</h4><p>A2</p>
+        <h4>English level:</h4>
+        <p>A2</p>
            
     </main>
-
+    <hr>
     <footer>
-
+        <h4>Contact with me:</h4>
+        <p>Phone number: <a href="tel:+48570211399">+48 570 211 399</a>;</p>
     </footer>
 </body>
 </html>
