--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1>Andrei Mandryk</h1>
         <img src="" alt="Фотка, которой пока нету)" />
     </header>
-<hr>
+
+    <hr>
+
     <main>
         <h4>Summary:</h4>
         <p>I am 26-years old beginning front-end developer from Brest, Belarus. 
@@ -22,18 +24,22 @@
             skills in programming.</p>
 
         <h4>Skills:</h4>
-        <p>HTML, CSS, JavaScript, Google DevTools, GIT</p>
+        <p>HTML, CSS, JavaScript, Google DevTools, GIT.</p>
         <h4>Education:</h4>
         <p>Belarusian University of Culture and Arts (librarianship), 
-               codeacademy (HTML, CSS basics), code-basics.ru (JavaScript)</p>
+               codeacademy (HTML, CSS basics), code-basics.ru (JavaScript).</p>
         <h4>English level:</h4>
         <p>A2</p>
            
     </main>
+
     <hr>
+
     <footer>
         <h4>Contact with me:</h4>
         <p>Phone number: <a href="tel:+48570211399">+48 570 211 399</a>;</p>
+        <p>E-mail: <a href="mailto:gagarin880120@gmail.com">gagarin880120@gmail.com</a></p>
     </footer>
+
 </body>
 </html>
